feat: Complete Generative AI functionality

--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -73,7 +73,7 @@
     background-color: #dfe4ea;
 }
 
-.main-borrom {
+.main-bottom {
     position: absolute;
     bottom: 0;
     width: 100%;
@@ -118,4 +118,32 @@
     margin: 15px auto;
     text-align: center;
     font-weight: 300;
+}
+
+.result {
+    padding: 0px 5%;
+    max-height: 70vh;
+    overflow-y: scroll;
+}
+
+.result::-webkit-scrollbar{
+    display: none;
+}
+
+.result-title {
+    margin: 40px 0px;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.result img {
+    width: 40px;
+    border-radius: 50%;
+}
+
+.result-data {
+    display: flex;
+    align-items: start;
+    gap: 20px;
 }
